--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,7 @@
 	"content_scripts": [
 		{
 			"matches": ["http://www.saltybet.com/*"],
-			"js": ["records.js", "tracker.js", "strategy.js", "salty.js"]
+			"js": ["records.js", "tracker.js", "mlearning.js", "strategy.js", "salty.js"]
 		}
 	]
 }
