--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,12 +7,13 @@
 	"permissions": ["storage", "unlimitedStorage", "tabs"],
 	"content_scripts": [
 		{
-			"matches": ["http://www.saltybet.com/*","http://www.twitch.tv/saltybet"],
-			"js": ["lib/FileSaver.min.js", "records.js", "tracker.js", "mlearning.js", "strategy.js", "salty.js", "twitch_content.js"]
+			"matches": ["http://www.saltybet.com/*", "http://www.twitch.tv/saltybet"],
+			"js": ["lib/FileSaver.min.js", "records.js", "tracker.js", "strategy.js", "salty.js", "twitch_content.js"]
 		}
-	],"background": {
-		"scripts": ["twitch_background.js"],
-		"persistent": false
+	],
+	"background": {
+		"persistent": false,
+		"scripts": ["twitch_background.js"]
 	},
 	"browser_action": {
 		"default_icon": "dp_icon32.png",
