Reloads the twitch-tab on creation to properly load twitch_content.js
Related to #55?

Sometimes when the twitch-tab is created, the twitch_content.js script
does not load. A reload should probably fix this.

Additionally, I've split the scripts and matches into the 2 pages so
unnecessary scripts are not loaded anymore on both sites.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,12 +3,16 @@
 
 	"name": "SaltBot",
 	"description": "This extension automates betting on SaltyBet.com.",
-	"version": "2.0.1",
-	"permissions": ["storage", "unlimitedStorage", "tabs", "alarms"],
+	"version": "2.0.2",
+	"permissions": ["storage", "unlimitedStorage", "tabs", "alarms", "http://www.twitch.tv/saltybet"],
 	"content_scripts": [
 		{
-			"matches": ["http://*.saltybet.com/*", "http://www.twitch.tv/saltybet"],
-			"js": ["lib/FileSaver.min.js", "records.js", "tracker.js", "strategy.js", "salty.js", "twitch_content.js"]
+			"matches": ["http://*.saltybet.com/"],
+			"js": ["lib/FileSaver.min.js", "records.js", "tracker.js", "strategy.js", "salty.js"]
+		},
+		{
+			"matches": ["http://www.twitch.tv/saltybet"],
+			"js": ["twitch_content.js"]
 		}
 	],
 	"background": {
