--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
 	"name": "SaltBot",
 	"description": "This extension automates betting on SaltyBet.com.",
 	"version": "2.0.2",
-	"permissions": ["storage", "unlimitedStorage", "declarativeContent", "tabs", "alarms", "http://www.twitch.tv/saltybet"],
+	"permissions": ["storage", "unlimitedStorage", "declarativeContent", "tabs", "alarms"],
 	"content_scripts": [
 		{
 			"matches": ["http://*.saltybet.com/"],
