RankingTree now chooses the biggest branches to merge

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,7 +12,7 @@
 		},
 		{
 			"matches": ["http://www.twitch.tv/saltybet"],
-			"js": ["twitch_content.js"]
+			"js": ["lib/FileSaver.min.js", "twitch_content.js"]
 		}
 	],
 	"background": {
