--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,16 +3,16 @@
 
 	"name": "SaltBot",
 	"description": "This extension automates betting on SaltyBet.com.",
-	"version": "2.0.4",
+	"version": "2.0.5",
 	"permissions": ["storage", "unlimitedStorage", "declarativeContent", "tabs", "alarms"],
 	"content_scripts": [
 		{
 			"matches": ["http://*.saltybet.com/"],
-			"js": ["lib/FileSaver.min.js", "records.js", "tracker.js", "strategy.js", "salty.js"]
+			"js": ["lib/FileSaver.min.js", "records.js", "tracker.js", "strategy.js", "salty.js", "lib/jquery.min.js"]
 		},
 		{
 			"matches": ["http://www.twitch.tv/saltybet"],
-			"js": ["twitch_content.js"]
+			"js": ["lib/jquery.min.js", "twitch_content.js"]
 		}
 	],
 	"background": {
