Betting limit, no betting on exhibitions, load chat instead of whole site
Fixes #64 and #66

You can now toggle if betting on exhibitions is enabled.

With the checkbox and input field you can input limits when the bot
should not bet anymore.

Instead of the whole twitch site only the chat is loaded.

Made the chat script more reliable by changing from onload to
onreadystate.change.

Fixed the month on the record and chromosome files, was 1 month too low.
(January = 0)

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
 
 	"name": "SaltBot",
 	"description": "This extension automates betting on SaltyBet.com.",
-	"version": "2.0.5",
+	"version": "2.1.0",
 	"permissions": ["storage", "unlimitedStorage", "declarativeContent", "tabs", "alarms"],
 	"content_scripts": [
 		{
@@ -11,7 +11,7 @@
 			"js": ["lib/FileSaver.min.js", "records.js", "tracker.js", "strategy.js", "salty.js", "lib/jquery.min.js"]
 		},
 		{
-			"matches": ["http://www.twitch.tv/saltybet"],
+			"matches": ["http://www.twitch.tv/saltybet/chat"],
 			"js": ["lib/jquery.min.js", "twitch_content.js"]
 		}
 	],
