--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: node_js
 node_js:
   - "iojs"
   - "7"
+os:
+  - linux
+cache:
+  directories:
+  - node_modules
+script:
+  - npm test
+  - npm run lint
