--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,32 @@
-language: node_js
+sudo: true
+dist: xenial
+
+language: "node_js"
 node_js:
   - "6"
-os:
-  - linux
-cache:
-  directories:
-  - node_modules
+
+before_install:
+  - "npm -g install npm@latest"
+
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sudo apt-get update
+  - sudo apt-get install -y libappindicator1 fonts-liberation
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+  - sudo dpkg -i google-chrome*.deb
+
+
+
+before_script:
+  - "npm run selenium-install"
+  - "npm run selenium-start &"
+  - "sleep 5"
+
 script:
-  - npm test
-  - npm run lint
+  - "npm test"
+
+addons:
+  hosts:
+    - fourth.third.second.first
+    - third.second.first
