--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,13 @@
   "compilerOptions": {
     "target": "es6",
     "outDir": "dist/js",
-    "allowJs": true
+    "allowJs": true,
+    "moduleResolution": "node"
   },
   "include": [
-      "./src/**/*.ts"
+    "./src/**/*.*s",
+    "./node_modules/moment/moment.d.ts",
+    "./node_modules/idb/lib/idb.d.ts",
+    "./node_modules/chrome-extension-async/chrome-extension-async.d.ts"
   ]
 }
