--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "homepage": "https://github.com/synkarius/saltbot#readme",
   "dependencies": {
-    "chrome-extension-async": "^3.2.4",
     "datatables.net": "1.10.11",
     "datatables.net-dt": "1.10.11",
     "idb": "^2.1.1",
@@ -34,6 +33,7 @@
     "uniq": "^1.0.1"
   },
   "devDependencies": {
+    "@types/chrome": "0.0.63",
     "@types/datatables.net": "^1.10.8",
     "@types/jquery": "^3.2.13",
     "@types/jqueryui": "^1.12.2",
