--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 sudo: false
+before install:
+  - npm install
 language: node_js
 node_js:
   - 'node'
@@ -6,6 +8,6 @@ os:
   - linux
 cache:
   directories:
-  - node_modules
+    - node_modules
 script:
   - npm install && npm run build
