--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 sudo: false
-before install:
-  - npm install
 language: node_js
 node_js:
   - 'node'
+  - '9'
 os:
   - linux
 cache:
   directories:
-    - node_modules
+    - "node_modules"
 script:
   - npm install && npm run build
