--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: false
 language: node_js
 node_js:
-  - '9'
+    - '9'
 os:
-  - linux
+    - linux
 cache:
-  directories:
-  - node_modules
+    directories:
+        - node_modules
 script:
-  - npm install && npm run build
+    - 'npm install && npm run build'
