--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saltbot",
-  "version": "2.5.0",
+  "version": "2.5.3-git9-2-19",
   "description": "Bot for betting on saltybet.com",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "contributors": [
     {
       "name": "Stefan Berger"
+      "name": "Calexil"
     }
   ],
   "license": "ISC",
