testing max bet

--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "author": "David Conway",
   "contributors": [
     {
-      "name": "Stefan Berger"
-    }
-    {
+      "name": "Stefan Berger",
       "name": "Calexil"
     }
   ],
