--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "saltbot",
-  "version": "2.5.3git-9-2-19",
   "description": "Bot for betting on saltybet.com",
-  "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "clean": "rimraf dist/js/*.js",
+    "build": "npx webpack"
   },
   "repository": {
     "type": "git",
@@ -13,7 +12,9 @@
   "author": "David Conway",
   "contributors": [
     {
-      "name": "Stefan Berger",
+      "name": "reconman"
+    },
+    {
       "name": "Calexil"
     }
   ],
@@ -23,25 +24,34 @@
   },
   "homepage": "https://github.com/synkarius/saltbot#readme",
   "dependencies": {
-    "datatables.net": "1.10.11",
-    "datatables.net-dt": "1.10.11",
-    "idb": "^2.1.1",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
+    "file-saver": "^2.0.2",
+    "idb": "^5.0.1",
     "jquery": "^3.4.0",
     "jquery-ui": "^1.12.1",
     "moment": "^2.19.3",
-    "npm": "^6.13.4",
-    "uniq": "^1.0.1"
+    "npm": "^6.13.4"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.63",
+    "@types/chrome": "^0.0.63",
     "@types/datatables.net": "^1.10.8",
+    "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.2.13",
     "@types/jqueryui": "^1.12.2",
-    "@types/node": "^9.6.0",
-    "ts-loader": "^4.1.0",
+    "@types/node": "^13.7.4",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^4.5.0",
     "tslint": "^5.9.1",
     "tslint-eslint-rules": "^5.1.0",
-    "typescript": "^2.7.2",
-    "webpack": "^4.2.0"
+    "typescript": "^3.8.2",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   }
 }
