--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,15 @@
     "target": "es6",
     "outDir": "dist/js",
     "allowJs": true,
-    "moduleResolution": "node"
+    "module": "ES2015",
+    "moduleResolution": "Node",
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": [
-    "./src/**/*.*s",
-    "./node_modules/moment/moment.d.ts",
-    "./node_modules/idb/lib/idb.d.ts"
+    "./src/**/*.ts"
   ]
 }
