--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "moment": "^2.27.0",
-    "npm": "^6.14.7"
+    "npm": "^6.14.8",
+    "tko": "^4.0.0-alpha5h"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.122",
@@ -39,17 +40,17 @@
     "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.5.1",
     "@types/jqueryui": "^1.12.13",
-    "@types/node": "^14.0.27",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^3.7.1",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^6.8.0",
+    "@types/node": "^14.6.4",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.0.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.8.1",
     "eslint-loader": "^4.0.2",
     "rimraf": "^3.0.2",
-    "ts-loader": "^8.0.1",
-    "tslint": "^5.9.1",
+    "ts-loader": "^8.0.3",
+    "tslint": "^6.1.3",
     "tslint-eslint-rules": "^5.1.0",
-    "typescript": "^3.9.7",
+    "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
