--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - name: Set tag env var
-      run: echo "TAG_VERSION=${{GITHUB_REF:10}}" >> $env:GITHUB_ENV
+      run: echo "TAG_VERSION=${GITHUB_REF#refs/tags/}" >> $env:GITHUB_ENV
 
     - name: Draft Release
       id: create_release
