--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -44,8 +44,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: $TAG_VERSION
-        release_name: Saltbot $TAG_VERSION
+        tag_name: $env:TAG_VERSION
+        release_name: Release $env:TAG_VERSION
         draft: true
         
     - name: Download Artifact
@@ -59,5 +59,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./extension/saltbot.zip
-        asset_name: saltbot $TAG_VERSION.zip
+        asset_name: saltbot $env:TAG_VERSION.zip
         asset_content_type: application/zip
