Add Chrome Store publishing

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -61,3 +61,11 @@ jobs:
         asset_path: ./extension/saltbot.zip
         asset_name: saltbot ${{env.TAG_VERSION}}.zip
         asset_content_type: application/zip
+    - name: Publish in Chrome Store
+      uses: trmcnvn/chrome-addon@v2
+      with:
+        extension: bholoegapebhflljekancpcnajigaiih
+        zip: ./extension/saltbot.zip
+        client-id: ${{ secrets.CLIENT_ID }}
+        client-secret: ${{ secrets.CLIENT_SECRET }}
+        refresh-token: ${{ secrets.REFRESH_TOKEN }}
