Switch to a different chrome publish action

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -62,10 +62,11 @@ jobs:
         asset_name: saltbot ${{env.TAG_VERSION}}.zip
         asset_content_type: application/zip
     - name: Publish in Chrome Store
-      uses: trmcnvn/chrome-addon@v2
+      uses: Klemensas/chrome-extension-upload-action@1.4.1
       with:
-        extension: bholoegapebhflljekancpcnajigaiih
-        zip: ./extension/saltbot.zip
+        app-id: 'bholoegapebhflljekancpcnajigaiih'
+        file-name: './extension/saltbot.zip'
         client-id: ${{ secrets.CLIENT_ID }}
         client-secret: ${{ secrets.CLIENT_SECRET }}
         refresh-token: ${{ secrets.REFRESH_TOKEN }}
+        publish: true
