--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "moment": "^2.29.0",
-    "npm": "^6.14.8",
+    "npm": "^7.0.11",
     "tko": "^4.0.0-alpha5h"
   },
   "devDependencies": {
@@ -41,15 +41,14 @@
     "@types/jquery": "^3.5.4",
     "@types/jqueryui": "^1.12.13",
     "@types/node": "^14.14.6",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.6.0",
-    "@typescript-eslint/parser": "^3.10.1",
-    "eslint": "^7.8.1",
-    "eslint-loader": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-webpack-plugin": "^2.3.0",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.7",
     "tslint": "^6.1.3",
-    "tslint-eslint-rules": "^5.1.0",
     "typescript": "^4.0.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
