--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "5.21.0",
     "@typescript-eslint/eslint-plugin-tslint": "5.21.0",
     "@typescript-eslint/parser": "5.21.0",
+    "copy-webpack-plugin": "^10.2.4",
     "eslint": "8.14.0",
     "eslint-webpack-plugin": "^3.1.1",
     "rimraf": "^3.0.2",
